1.61 Beta 1      NOT RELEASED
=================================
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- changed intval() to (int) (mamba)
- changed dirname(__FILE__) to __DIR__ (mamba)
- code cosmetics (mamba)
- naming consistently language variables (mamba)


1.60            2012-12-18:
============================
- Conversion to XOOPS 2.5.0 GUI (mamba)
- converting to dynamic Editor selection (mamba)
- fixing date issues-


1.50 23 August 2004
============================
This is version 1.5 of Soapbox. Actually, this is NOT the full version, but a stripped down one. It includes all the necessary files to run the module, but for the sake of keeping the size small, it has left out:

+ The language files, which will be available in a separate download once the debugging is complete.
+ The help files, which I still have to update and which will also be available in a separate download in different formats.
For a few days, this will be available as a release candidate, while xoopsers look for bugs and I work on the docs. If you find bugs, please report them to hsalazar@xoops.org. I'll try to fix them if possible.

I've evaluated the inclusion of some other functions, as well as the possible implementation of several suggestions. Her's a couple of comments about them:

+ Most suggestions indicate that xoopsers want to use Soapbox as a general article management module, which is not its intended use. That's why they keep asking for subcategories, several authors per column, expiration dates and such. Soapbox was designed to be used as an editorial column module, with columns being defined as single-author contributions to a site.
+ I've tried to include an internal search function, but decided against it for two reasons: first, XOOPS internal function is good enough for most purposes; second, haven't found a way to paginate results when there are many.